[package]
name = "data_structs"
version = "0.1.0"
authors = ["jmdoucette <jmdoucette41@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.3"
rand = "0.8.4"

[[bench]]
name = "my_benchmark"
harness = false